Bash/logs/Training.sh-51266.log
Running via sbatch on puck5 on Mon Nov 17 04:07:48 PM CET 2025
Python 3.10.13
  File "/home/tleludec/Transcription_whisper/Code/fine-tuning-whisper/Script/dataset_hugging_face.py", line 66
    return valid, invalid
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function
computation end :Mon Nov 17 04:07:48 PM CET 2025
